--- a/html/styles.less
+++ b/html/styles.less
@@ -1,10 +1,14 @@
 @border-radius: 8px;
 @border-width: 3px;
 
-@accent: #3fd665;
+@accent: #f37a33;
 
 @mobile: ~'(max-width: 430px)';
 @tablet: ~'(max-width: 770px)';
+
+:root {
+    --accent: @accent;
+}
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -23,15 +27,12 @@ html {
         margin: 0;
         padding: 0;
         width: 100%;
-        height: 100%;
-        background-image: url('bg1.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;    
+        height: 100%;   
         font-family: "Roboto", sans-serif;
         font-weight: 100;
         font-style: normal;
         font-size: 16px;
+        overflow: hidden;
 
         h1, h2, h3, h4, h5, h6 {
             margin: 0;
@@ -41,7 +42,18 @@ html {
 
         b {
             font-weight: 600;
-            color: @accent;
+            color: var(--accent);
+        }
+
+        a {
+            text-decoration: underline;
+            color: var(--accent);
+            font-weight: bold;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                opacity: 0.4;
+            }
         }
 
         input[type=text] {
@@ -60,6 +72,15 @@ html {
 
         .hide {
             display: none !important;
+        }
+
+        #bg {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba(0,0,0, 0.5);
         }
 
         .container {
@@ -176,7 +197,7 @@ html {
                                 gap: 5px;
 
                                 .path {
-                                    color: @accent;
+                                    color: var(--accent);
                                     font-size: 110%;
                                     font-weight: bold;
                                 }
