--- a/index.pug
+++ b/index.pug
@@ -33,4 +33,6 @@ html(lang='en')
                             //- span | Suggested commands: 
                             span.suggested-cmds-list
 
+    script(src='utils.js')
+    script(src='commands.js')
     script(src='scripts.js')
