--- a/html/styles.less
+++ b/html/styles.less
@@ -76,8 +76,9 @@ html {
 
         #bg {
             position: absolute;
-            width: 100%;
-            height: 100%;
+            object-fit: cover;
+            width: auto;
+            height: auto;
             top: 0;
             left: 0;
             background-color: rgba(0,0,0, 0.5);
@@ -128,7 +129,7 @@ html {
             .card {
                 border-radius: @border-radius;
                 color: white;
-                box-shadow: 0 0 15px 0 #ffffff44;
+                box-shadow: 0 0 30px 15px #ffffff17;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
